# mafsmith

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  manuscript.yml
archive/: README.md
archive/results/: benchmark_annotated_2026-04-21.md  benchmark_nf_20260418_234745.json
archive/scripts/: benchmark_nf.py  compare_maf.py
archive/tests-fixtures/: integration_annotated.split.vcf
benches/: vcf2maf.rs
docs/: rewrites-bio-analysis.md
manuscript/: Makefile  manuscript.md  references.bib
results/: README.md  benchmark_2026-04-20.md  benchmark_annotated_2026-04-20.md  compute_savings.py  conversion_benchmark_giab_grch38.md  pcawg_inhibit_vep_validation.md  somatic_tn_benchmark.md
scripts/: README.md  batch_subcommand_diff.sh  batch_vcf_diff_ccle.sh  batch_vcf_diff_ccle_inhibit_vep.sh  batch_vcf_diff_manuscript.sh  batch_vcf_diff_pcawg.sh  batch_vcf_diff_pcawg_inhibit_vep.sh  batch_vcf_diff_synapse.sh  batch_vcf_diff_vep.sh  benchmark.py  benchmark.sh  benchmark_all.py  compare_annotations.py  compare_maf.py  download_manuscript_vcfs.sh  generate_expected.sh  maf2maf_diff.py  maf2vcf_diff.py  run_comparison.sh  run_real_world_comparison.sh  synapse_validate.py  vcf2vcf_diff.py  vcf_diff.py
src/: cli.rs  fasta.rs  lib.rs  main.rs
src/annotation/: consequence.rs  csq.rs  depth.rs  mod.rs  transcript.rs
src/commands/: fetch.rs  maf2maf.rs  maf2vcf.rs  mod.rs  vcf2maf.rs  vcf2vcf.rs
src/maf/: record.rs  writer.rs
src/vcf/: mod.rs  normalization.rs
tests/: integration_test.rs
(+10 files in other folders)
